<resources>
    <string name="app_name">Sekáč</string>

    <string name="count">počet</string>
    <string name="height">dĺžka</string>
    <string name="width">šírka</string>
    <string name="volume">objem</string>
    <string name="height_short">d</string>
    <string name="width_short">š</string>
    <string name="volume_ov">kubíkov</string>
    <string name="volume_ky">kubíky</string>
    <string name="add">Pridaj</string>
    <string name="share_progress">Zdieľať postup</string>
    <string name="finish_day">Ukončiť deň</string>
    <string name="summary_of_day">Sumár dňa</string>
    <string name="matter">hmota</string>

    <string name="height_default">15</string>
    <string name="width_default">25</string>
    <string name="volume_default">6999</string>
    <string name="date_default">22. Február 2016</string>
    <string name="no_notes">Žiadne poznámky</string>
    <string name="cancel">Zrušiť</string>
    <string name="save_date">Ulož Dátum</string>
    <string name="key_current_date">key_current_date</string>
    <string name="saving_progress_title">Uschovávam postup</string>
    <string name="saving_progress_message">Uschovávam postup… Čakajte prosím</string>
    <string name="sure_to_finish_day">Ukončením dňa sa vymažú všetky poznámky z aplikácie a vytvorí sa CSV súbor na telefóne a aj na Dropboxe. Ste si istý?</string>
    <string name="hooray_to_a_new_day">Deň bol úspešne ukončený. A teraz hurá do nového dňa!</string>
    <string name="das_ist_hruza">Das Ist Hrúza!</string>


</resources>
