<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.SummaryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" android:layout_above="@+id/linearLayout"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/activity_horizontal_margin">

        <Button
            android:id="@+id/button_dateChange"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/date_default"/>

        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/count"/>

        <TextView
            android:id="@+id/text_totalCount"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/volume_default"
            android:gravity="center_horizontal"
            android:textSize="@dimen/text_value_size"/>

        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/matter"/>

        <TextView
            android:id="@+id/text_totalMatter"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/volume_default"
            android:gravity="center_horizontal"
            android:textSize="@dimen/text_value_size"/>

        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/volume_ky"/>

        <TextView
            android:id="@+id/text_totalVolume"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/volume_default"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:textSize="@dimen/text_value_size"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" android:id="@+id/linearLayout">

        <Button
            android:id="@+id/button_finishDay"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            android:text="@string/finish_day"/>

        <Button
            android:id="@+id/button_shareProgress"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="@string/share_progress"/>

    </LinearLayout>



</RelativeLayout>
