<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <ViewSwitcher
        android:id="@+id/switcher_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_above="@+id/linear_bottom">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_previousRecords"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/colorSecondaryText"
            android:text="@string/no_notes"/>

    </ViewSwitcher>

    <LinearLayout
        android:id="@+id/linear_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <EditText
            android:id="@+id/field_addHeight"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/height"
            android:gravity="center"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:nextFocusRight="@+id/field_addWidth"
            android:maxLines="1"
            android:layout_marginTop="5dp"/>

        <EditText
            android:id="@+id/field_addWidth"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:nextFocusLeft="@+id/field_addHeight"
            android:hint="@string/width"
            android:maxLines="1"

            android:layout_marginTop="5dp"/>
        <Button
            android:id="@+id/button_addCut"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/add"/>

    </LinearLayout>

</RelativeLayout>
